--- a/notebooks/decoder.ipynb
+++ b/notebooks/decoder.ipynb
@@ -22,6 +22,7 @@
    "source": [
     "# Load dataset\n",
     "from dataset import get_dataset\n",
+    "\n",
     "dataset = get_dataset()"
    ]
   },
@@ -104,7 +105,7 @@
     "import torch\n",
     "import wandb\n",
     "\n",
-    "model_name = 'gpt2'\n",
+    "model_name = \"gpt2\"\n",
     "epochs = 3\n",
     "num_labels = 4\n",
     "batch_size = 32\n",
@@ -124,15 +125,17 @@
     "# check which one is required\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
     "\n",
+    "\n",
     "def tokenize(input):\n",
-    "    return tokenizer(input['text'], padding=\"max_length\", truncation=True)\n",
+    "    return tokenizer(input[\"text\"], padding=\"max_length\", truncation=True)\n",
+    "\n",
     "\n",
     "# Tokenize dataset\n",
     "tokenized_dataset = dataset.map(tokenize, batched=True)\n",
     "\n",
     "# Shuffle and pick subset from dataset\n",
-    "train_dataset = tokenized_dataset['train'].shuffle(seed=442333+424714).select(range(5000))\n",
-    "eval_dataset = tokenized_dataset['test'].shuffle(seed=442333+424714).select(range(1000))"
+    "train_dataset = tokenized_dataset[\"train\"].shuffle(seed=442333 + 424714).select(range(5000))\n",
+    "eval_dataset = tokenized_dataset[\"test\"].shuffle(seed=442333 + 424714).select(range(1000))"
    ]
   },
   {
@@ -143,13 +146,15 @@
    "source": [
     "import evaluate\n",
     "import numpy as np\n",
+    "\n",
     "metric = evaluate.load(\"accuracy\")\n",
+    "\n",
     "\n",
     "# Prepare evaluation callback, metric = accuracy\n",
     "def compute_metrics(eval_pred):\n",
-    "  logits, labels = eval_pred\n",
-    "  predictions = np.argmax(logits, axis=-1)\n",
-    "  return metric.compute(predictions=predictions, references=labels)"
+    "    logits, labels = eval_pred\n",
+    "    predictions = np.argmax(logits, axis=-1)\n",
+    "    return metric.compute(predictions=predictions, references=labels)"
    ]
   },
   {
@@ -159,6 +164,7 @@
    "outputs": [],
    "source": [
     "# Define custom classification head, 2 layers deep\n",
+    "\n",
     "\n",
     "class CustomClassificationHead(torch.nn.Module):\n",
     "    def __init__(self, input_dim, num_labels):\n",
@@ -196,7 +202,7 @@
    "source": [
     "# Create model\n",
     "config = AutoConfig.from_pretrained(model_name, num_labels=num_labels)\n",
-    "model =  AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=num_labels)\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=num_labels)\n",
     "\n",
     "model.config.pad_token_id = model.config.eos_token_id\n",
     "# Connect new classfier to model\n",
@@ -226,12 +232,12 @@
    "outputs": [],
    "source": [
     "training_args = TrainingArguments(\n",
-    "    output_dir='./results',\n",
+    "    output_dir=\"./results\",\n",
     "    num_train_epochs=epochs,\n",
     "    per_device_train_batch_size=batch_size,\n",
     "    evaluation_strategy=\"epoch\",\n",
     "    save_strategy=\"epoch\",\n",
-    "    report_to=\"wandb\"\n",
+    "    report_to=\"wandb\",\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
@@ -312,49 +318,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GPT2ForSequenceClassification(\n",
-      "  (transformer): GPT2Model(\n",
-      "    (wte): Embedding(50257, 768)\n",
-      "    (wpe): Embedding(1024, 768)\n",
-      "    (drop): Dropout(p=0.1, inplace=False)\n",
-      "    (h): ModuleList(\n",
-      "      (0-11): 12 x GPT2Block(\n",
-      "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-      "        (attn): GPT2Attention(\n",
-      "          (c_attn): Conv1D()\n",
-      "          (c_proj): Conv1D()\n",
-      "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
-      "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
-      "        )\n",
-      "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-      "        (mlp): GPT2MLP(\n",
-      "          (c_fc): Conv1D()\n",
-      "          (c_proj): Conv1D()\n",
-      "          (act): NewGELUActivation()\n",
-      "          (dropout): Dropout(p=0.1, inplace=False)\n",
-      "        )\n",
-      "      )\n",
-      "    )\n",
-      "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-      "    (classifier): CustomClassificationHead(\n",
-      "      (dense): Linear(in_features=768, out_features=512, bias=True)\n",
-      "      (dense2nd): Linear(in_features=512, out_features=256, bias=True)\n",
-      "      (dropout): Dropout(p=0.2, inplace=False)\n",
-      "      (out_proj): Linear(in_features=256, out_features=4, bias=True)\n",
-      "    )\n",
-      "  )\n",
-      "  (score): Linear(in_features=768, out_features=4, bias=False)\n",
-      ")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(model)"
    ]
