--- a/notebooks/encoder-decoder.ipynb
+++ b/notebooks/encoder-decoder.ipynb
@@ -22,6 +22,7 @@
    "source": [
     "# Load dataset\n",
     "from dataset import get_dataset\n",
+    "\n",
     "dataset = get_dataset()"
    ]
   },
@@ -103,7 +104,7 @@
     "from transformers import Trainer, TrainingArguments, AutoTokenizer, AutoModelForSequenceClassification\n",
     "import wandb\n",
     "\n",
-    "model_name = 't5-large'\n",
+    "model_name = \"t5-large\"\n",
     "num_labels = 4\n",
     "epochs = 3\n",
     "batch_size = 32\n",
@@ -120,13 +121,15 @@
     "# Create tokenizer\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name, model_max_length=128)\n",
     "\n",
+    "\n",
     "def tokenize(input):\n",
-    "    return tokenizer(input['text'], padding=\"max_length\", truncation=True)\n",
+    "    return tokenizer(input[\"text\"], padding=\"max_length\", truncation=True)\n",
+    "\n",
     "\n",
     "# Tokenize, Shuffle and Pick dataset\n",
     "tokenized_dataset = dataset.map(tokenize, batched=True)\n",
-    "train_dataset = tokenized_dataset['train'].shuffle(seed=442333+424714).select(range(5000))\n",
-    "eval_dataset = tokenized_dataset['test'].shuffle(seed=442333+424714).select(range(1000))"
+    "train_dataset = tokenized_dataset[\"train\"].shuffle(seed=442333 + 424714).select(range(5000))\n",
+    "eval_dataset = tokenized_dataset[\"test\"].shuffle(seed=442333 + 424714).select(range(1000))"
    ]
   },
   {
@@ -165,12 +168,14 @@
     "    for param in model.transformer.decoder.block[i].parameters():\n",
     "        param.requires_grad = False\n",
     "\n",
+    "\n",
     "# Function to print layers and their state\n",
     "def print_named_parameters_freezing_state():\n",
     "    for name, param in model.named_parameters():\n",
     "        print(name, \"Freezed\" if param.requires_grad == False else \"Unfreezed\")\n",
     "\n",
-    "#print_named_parameters_freezing_state()"
+    "\n",
+    "# print_named_parameters_freezing_state()"
    ]
   },
   {
@@ -183,6 +188,7 @@
     "import numpy as np\n",
     "\n",
     "metric = evaluate.load(\"accuracy\")\n",
+    "\n",
     "\n",
     "# Accuracy metric\n",
     "def compute_metrics(p):\n",
@@ -202,11 +208,11 @@
    "outputs": [],
    "source": [
     "training_args = TrainingArguments(\n",
-    "    output_dir='./results',\n",
+    "    output_dir=\"./results\",\n",
     "    num_train_epochs=epochs,\n",
     "    per_device_train_batch_size=batch_size,\n",
-    "    evaluation_strategy='epoch',\n",
-    "    report_to=\"wandb\"\n",
+    "    evaluation_strategy=\"epoch\",\n",
+    "    report_to=\"wandb\",\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
@@ -214,7 +220,7 @@
     "    args=training_args,\n",
     "    train_dataset=train_dataset,\n",
     "    eval_dataset=eval_dataset,\n",
-    "    compute_metrics=compute_metrics\n",
+    "    compute_metrics=compute_metrics,\n",
     ")"
    ]
   },
