--- a/notebooks/encoder.ipynb
+++ b/notebooks/encoder.ipynb
@@ -22,6 +22,7 @@
    "source": [
     "# Load dataset\n",
     "from dataset import get_dataset\n",
+    "\n",
     "dataset = get_dataset()"
    ]
   },
@@ -105,7 +106,7 @@
     "from torch import nn\n",
     "import wandb\n",
     "\n",
-    "model_name = 'roberta-base'\n",
+    "model_name = \"roberta-base\"\n",
     "batch_size = 32\n",
     "epochs = 5\n",
     "num_labels = 4\n",
@@ -122,15 +123,17 @@
     "# Define tokenizer\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "\n",
+    "\n",
     "def tokenize(input):\n",
-    "  return tokenizer(input['text'], padding=\"max_length\", truncation=True)\n",
+    "    return tokenizer(input[\"text\"], padding=\"max_length\", truncation=True)\n",
+    "\n",
     "\n",
     "# Tokenize dataset\n",
     "tokenized_dataset = dataset.map(tokenize, batched=True)\n",
     "\n",
     "# Shuffle and pick subset from dataset\n",
-    "train_dataset = tokenized_dataset['train'].shuffle(seed=442333+424714).select(range(5000))\n",
-    "eval_dataset = tokenized_dataset['test'].shuffle(seed=442333+424714).select(range(1000))"
+    "train_dataset = tokenized_dataset[\"train\"].shuffle(seed=442333 + 424714).select(range(5000))\n",
+    "eval_dataset = tokenized_dataset[\"test\"].shuffle(seed=442333 + 424714).select(range(1000))"
    ]
   },
   {
@@ -141,13 +144,15 @@
    "source": [
     "import evaluate\n",
     "import numpy as np\n",
+    "\n",
     "metric = evaluate.load(\"accuracy\")\n",
+    "\n",
     "\n",
     "# Prepare evaluation callback, metric = accuracy\n",
     "def compute_metrics(eval_pred):\n",
-    "  logits, labels = eval_pred\n",
-    "  predictions = np.argmax(logits, axis=-1)\n",
-    "  return metric.compute(predictions=predictions, references=labels)"
+    "    logits, labels = eval_pred\n",
+    "    predictions = np.argmax(logits, axis=-1)\n",
+    "    return metric.compute(predictions=predictions, references=labels)"
    ]
   },
   {
@@ -161,7 +166,10 @@
     "\n",
     "lora_config = LoraConfig(\n",
     "    # r = 8\n",
-    "    task_type=TaskType.SEQ_CLS, r=8, lora_alpha=1, lora_dropout=0.1\n",
+    "    task_type=TaskType.SEQ_CLS,\n",
+    "    r=8,\n",
+    "    lora_alpha=1,\n",
+    "    lora_dropout=0.1,\n",
     ")"
    ]
   },
@@ -175,18 +183,18 @@
     "class RobertaClassificationHead(nn.Module):\n",
     "    def __init__(self, config):\n",
     "        super().__init__()\n",
-    "        self.dense = nn.Linear(config.hidden_size, config.hidden_size//2) # smaller size\n",
+    "        self.dense = nn.Linear(config.hidden_size, config.hidden_size // 2)  # smaller size\n",
     "        classifier_dropout = (\n",
     "            config.classifier_dropout if config.classifier_dropout is not None else config.hidden_dropout_prob\n",
     "        )\n",
     "        self.dropout = nn.Dropout(classifier_dropout)\n",
-    "        self.out_proj = nn.Linear(config.hidden_size//2, config.num_labels)\n",
+    "        self.out_proj = nn.Linear(config.hidden_size // 2, config.num_labels)\n",
     "\n",
     "    def forward(self, features, **kwargs):\n",
     "        x = features[:, 0, :]  # take <s> token (equiv. to [CLS])\n",
     "        x = self.dropout(x)\n",
     "        x = self.dense(x)\n",
-    "        x = torch.relu(x) # different activation function\n",
+    "        x = torch.relu(x)  # different activation function\n",
     "        x = self.dropout(x)\n",
     "        x = self.out_proj(x)\n",
     "        return x"
@@ -209,10 +217,11 @@
    "source": [
     "# Create model\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=num_labels)\n",
-    "model.classifier = RobertaClassificationHead(model.config) # replace classifer\n",
+    "model.classifier = RobertaClassificationHead(model.config)  # replace classifer\n",
     "\n",
     "from peft import get_peft_model\n",
-    "model = get_peft_model(model, lora_config) # setup lora"
+    "\n",
+    "model = get_peft_model(model, lora_config)  # setup lora"
    ]
   },
   {
@@ -222,11 +231,11 @@
    "outputs": [],
    "source": [
     "training_args = TrainingArguments(\n",
-    "    output_dir='./results',\n",
+    "    output_dir=\"./results\",\n",
     "    num_train_epochs=epochs,\n",
     "    per_device_train_batch_size=batch_size,\n",
     "    evaluation_strategy=\"epoch\",\n",
-    "    report_to=\"wandb\"\n",
+    "    report_to=\"wandb\",\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
