--- a/notebooks/prompting.ipynb
+++ b/notebooks/prompting.ipynb
@@ -24,6 +24,7 @@
    "source": [
     "# Load dataset\n",
     "from dataset import get_dataset\n",
+    "\n",
     "dataset = get_dataset()"
    ]
   },
@@ -46,7 +47,7 @@
     "from transformers import AutoModelForCausalLM, AutoModelForMaskedLM, AutoModelForSeq2SeqLM, AutoTokenizer\n",
     "import torch\n",
     "\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(device)\n",
     "\n",
     "model_id = \"google/flan-t5-xl\""
@@ -64,7 +65,7 @@
     "tokenizer.pad_token_id = tokenizer.eos_token_id\n",
     "\n",
     "# Shuffle and pick subset from dataset\n",
-    "subset = dataset['test'].shuffle(seed=442333+424714)"
+    "subset = dataset[\"test\"].shuffle(seed=442333 + 424714)"
    ]
   },
   {
@@ -101,7 +102,7 @@
    "outputs": [],
    "source": [
     "# Define prompting func\n",
-    "def ask(text, max_new_tokens = 20):\n",
+    "def ask(text, max_new_tokens=20):\n",
     "    inputs = tokenizer(text, return_tensors=\"pt\").to(device)\n",
     "\n",
     "    outputs = model.generate(**inputs, max_new_tokens=max_new_tokens)\n",
@@ -156,9 +157,9 @@
     "correct = 0\n",
     "total = 0\n",
     "for example in tqdm(subset):\n",
-    "    text = example['text']\n",
-    "    category = example['label']\n",
-    "    \n",
+    "    text = example[\"text\"]\n",
+    "    category = example[\"label\"]\n",
+    "\n",
     "    context = f\"You have {len(categories)} categories: {', '. join(categories)}. Use exactly those categories. Decide which category the following text belongs to: \"\n",
     "\n",
     "    prompt = f\"{context}'{text}'.\"\n",
